// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HolidaysPage should render empty holidays list 1`] = `
<WithStyles(Paper)>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Demandes de congés | 
      FooApp
    </title>
  </HelmetWrapper>
  <WithStyles(Toolbar)>
    <WithStyles(Typography)
      component="h2"
      gutterBottom={true}
      variant="headline"
    >
      Demandes de congés
    </WithStyles(Typography)>
  </WithStyles(Toolbar)>
  <div>
    <WithStyles(CardContent)>
      <WithStyles(Typography)>
        Aucune demande de congés pour le moment.
      </WithStyles(Typography)>
    </WithStyles(CardContent)>
  </div>
  <table>
    <TableFooter
      component="tfoot"
    >
      <WithStyles(TableRow)>
        <WithStyles(TablePagination)
          count={25}
          labelDisplayedRows={[Function]}
          onChangePage={[Function]}
          onChangeRowsPerPage={[Function]}
          page={0}
          rowsPerPage={25}
          rowsPerPageOptions={
            Array [
              25,
              50,
              100,
            ]
          }
        />
      </WithStyles(TableRow)>
    </TableFooter>
  </table>
</WithStyles(Paper)>
`;

exports[`HolidaysPage should render in loading state 1`] = `<WithStyles(LoadingPage) />`;

exports[`HolidaysPage should render properly 1`] = `
<WithStyles(Paper)>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Demandes de congés | 
      FooApp
    </title>
  </HelmetWrapper>
  <WithStyles(Toolbar)>
    <WithStyles(Typography)
      component="h2"
      gutterBottom={true}
      variant="headline"
    >
      Demandes de congés
    </WithStyles(Typography)>
  </WithStyles(Toolbar)>
  <div>
    <WithStyles(Table)>
      <WithStyles(TableHead)>
        <WithStyles(TableRow)>
          <WithStyles(TableCell)>
            Partner
          </WithStyles(TableCell)>
          <WithStyles(TableCell)>
            Date de la demande
          </WithStyles(TableCell)>
          <Hidden
            implementation="js"
            lgDown={false}
            lgUp={false}
            mdDown={true}
            mdUp={false}
            smDown={false}
            smUp={false}
            xlDown={false}
            xlUp={false}
            xsDown={false}
            xsUp={false}
          >
            <WithStyles(TableCell)
              key="paidHolidays"
              numeric={true}
            >
              Congés payés
            </WithStyles(TableCell)>
            <WithStyles(TableCell)
              key="unpaidHolidays"
              numeric={true}
            >
              Congés sans solde
            </WithStyles(TableCell)>
            <WithStyles(TableCell)
              key="conventionalHolidays"
              numeric={true}
            >
              Absences Syntec
            </WithStyles(TableCell)>
          </Hidden>
          <WithStyles(TableCell)>
            Status
          </WithStyles(TableCell)>
        </WithStyles(TableRow)>
      </WithStyles(TableHead)>
      <WithStyles(TableBody)>
        <WithStyles(HolidayRow)
          disableMenu={true}
          displayPartnerName={true}
          holiday={
            Object {
              "date": "bar",
              "id": "foo",
              "periods": Array [
                Object {
                  "baz": "qux",
                },
              ],
              "status": "pending",
              "user": "foo",
            }
          }
          key="foo"
          onClick={[Function]}
          partner={
            Object {
              "baz": "qux",
            }
          }
        />
        <WithStyles(HolidayRow)
          disableMenu={true}
          displayPartnerName={true}
          holiday={
            Object {
              "date": "qux",
              "id": "baz",
              "periods": Array [],
              "status": "validated",
              "user": "foo",
            }
          }
          key="baz"
          onClick={[Function]}
          partner={
            Object {
              "baz": "qux",
            }
          }
        />
      </WithStyles(TableBody)>
    </WithStyles(Table)>
  </div>
  <table>
    <TableFooter
      component="tfoot"
    >
      <WithStyles(TableRow)>
        <WithStyles(TablePagination)
          count={25}
          labelDisplayedRows={[Function]}
          onChangePage={[Function]}
          onChangeRowsPerPage={[Function]}
          page={0}
          rowsPerPage={25}
          rowsPerPageOptions={
            Array [
              25,
              50,
              100,
            ]
          }
        />
      </WithStyles(TableRow)>
    </TableFooter>
  </table>
</WithStyles(Paper)>
`;
